"Structure update - v:0.1 cmt:2"

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,3 +1,5 @@
 /build
-/main/java/com/example/footballapp2/util/ApiHelper.kt
-/main/java/com/example/footballapp2/util/DBHelper.kt
+/src/main/java/com/example/footballapp2/util/ApiHelper.kt
+/src/main/java/com/example/footballapp2/util/DBHelper.kt
+/src/main/java/com/example/footballapp2/util/LogHelper.kt
+/google-services.json
