--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 local.properties
 /app/src/main/java/com/example/footballapp2/util/ApiHelper.kt
 /app/src/main/java/com/example/footballapp2/util/DBHelper.kt
+/app/google-services.json
